--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "youtube-thumbnail": "1.3.0",
+    "react-player": "2.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
