--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-player": "2.14.1",
+    "react-router": "^6.22.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.0.4",
-    "youtube-thumbnail": "1.3.0",
-    "react-player": "2.14.1"
+    "youtube-thumbnail": "1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
